--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+springfox.documentation.swagger-ui.enabled=true
+
